c/examples/gcc/testsuite/c-c++-common/gomp/begin-assumes-3.c
#pragma omp begin assumes no_openmp_routines
void foo (void);	/* { dg-error "'#pragma omp begin assumes' without corresponding '#pragma omp end assumes'" } */
